--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router": "^3.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-star-ratings": "^2.3.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
